# OpenModSim

./: .gitignore  LICENSE  LICENSE.md  README.md  README.md.in  build-macos.sh  build.ps1  build.sh
docs/: lang.js  (+8 more)
omodsim/: CMakeLists.txt  bufferinglistmodel.h  cmdlineparser.cpp  cmdlineparser.h  connectiondetails.h  connectionmanager.cpp  connectionmanager.h  consolelogger.cpp  consolelogger.h  datasimulator.cpp  datasimulator.h  displaydefinition.h  enums.h  formatutils.h  formmodsim.cpp  formmodsim.h  formmodsim.ui  jscompleter.cpp  jscompleter.h  jshighlighter.cpp  jshighlighter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menuconnect.cpp  menuconnect.h  modbusdataunitmap.cpp  modbusdataunitmap.h  modbusdefinitions.h  modbuserrorsimulations.h  modbuslimits.h  modbusmultiserver.cpp  modbusmultiserver.h  modbusrtuserialserver.cpp  modbusrtuserialserver.h  modbusserver.cpp  modbusserver.h  modbussimulationparams.h  modbustcpconnection.cpp  (+14 more)
omodsim/controls/: addressspacecombobox.cpp  addressspacecombobox.h  bytelisttextedit.cpp  codeeditor.cpp  codeeditor.h  componentinfocontrol.cpp  componentinfocontrol.h  console.cpp  console.h  consoleoutput.cpp  consoleoutput.h  helpbrowser.cpp  helpbrowser.h  helpwidget.cpp  helpwidget.h  jscodeeditor.cpp  jscodeeditor.h  jscriptcontrol.cpp  jscriptcontrol.h  jscriptcontrol.ui  jshelpcontrol.cpp  jshelpcontrol.h  mainstatusbar.cpp  mainstatusbar.h  modbuslogwidget.cpp  modbuslogwidget.h  modbusmessagewidget.cpp  numericlineedit.cpp  numericlineedit.h  outputwidget.cpp  outputwidget.h  outputwidget.ui  pointtypecombobox.cpp  pointtypecombobox.h  runmodecombobox.cpp  runmodecombobox.h  scriptcontrol.cpp  scriptcontrol.h  scriptcontrol.ui  searchlineedit.cpp  (+3 more)
omodsim/dialogs/: dialogabout.cpp  dialogabout.h  dialogabout.ui  dialogautosimulation.cpp  dialogautosimulation.h  dialogautosimulation.ui  dialogcoilsimulation.cpp  dialogcoilsimulation.h  dialogcoilsimulation.ui  dialogdisplaydefinition.cpp  dialogdisplaydefinition.h  dialogdisplaydefinition.ui  dialogforcemultiplecoils.cpp  dialogforcemultiplecoils.h  dialogforcemultipleregisters.cpp  dialogforcemultipleregisters.h  dialogforcemultipleregisters.ui  dialogmodbusdefinitions.cpp  dialogmodbusdefinitions.h  dialogmodbusdefinitions.ui  dialograwdatalog.cpp  dialograwdatalog.h  dialograwdatalog.ui  dialogscriptsettings.cpp  dialogscriptsettings.h  dialogscriptsettings.ui  dialogselectserviceport.cpp  dialogselectserviceport.h  dialogselectserviceport.ui  dialogserversettings.cpp  dialogserversettings.h  dialogserversettings.ui  dialogsetuppresetdata.cpp  dialogsetuppresetdata.h  dialogsetupserialport.cpp  dialogsetupserialport.h  dialogsetupserialport.ui  dialogwritecoilregister.cpp  dialogwritecoilregister.h  dialogwritecoilregister.ui  (+5 more)
omodsim/docs/: date.html  index.html  index_ru.html  jshelp.qhcp  jshelp.qhp
omodsim/documentation/: jshelp.qch  jshelp.qhc
omodsim/jsobjects/: console.cpp  console.h  consoleobject.cpp  consoleobject.h  errorsimulations.cpp  errorsimulations.h  modbusserverobject.cpp  modbusserverobject.h  script.cpp  script.h  scriptobject.cpp  scriptobject.h  server.cpp  server.h  storage.h  storageobject.cpp  storageobject.h
omodsim/modbusmessages/: modbusmessage.cpp  modbusmessage.h
omodsim/translations/: omodsim_ru.qm  omodsim_ru.ts  omodsim_zh.qm  omodsim_zh.ts  omodsim_zh_CN.qm  omodsim_zh_CN.ts  omodsim_zh_TW.qm  omodsim_zh_TW.ts
src/: CMakeLists.txt  ansimenu.cpp  ansimenu.h  ansiutils.h  application.cpp  application.h  applogger.cpp  applogger.h  apppreferences.cpp  apppreferences.h  appproject.cpp  appproject.h  apptrace.h  bufferinglistmodel.h  byteorderutils.h  cmake_install_macos.cmake  cmake_install_windows.cmake  cmake_uninstall.cmake.in  cmdlineparser.cpp  cmdlineparser.h  connectiondetails.h  datadelegate.cpp  datadelegate.h  datamapdatamodel.cpp  datamapdatamodel.h  datasimulator.cpp  datasimulator.h  displaydefinition.h  enums.h  fontutils.h  formatutils.h  formdatamapview.cpp  formdatamapview.h  formdatamapview.ui  formdataview.cpp  formdataview.h  formdataview.ui  formmodsim.cpp  formmodsim.h  formmodsim.ui  (+84 more)
src/cmake/: cmake_install_linux.cmake  cmake_install_macos.cmake  coverage.cmake  generated_files.cmake  help_generator.cmake  platform_target.cmake  project_version.cmake  qlementine.cmake  qt.cmake  sources.cmake  target_linux.cmake  target_macos.cmake  target_windows.cmake  tests.cmake  translations.cmake  ui_normalization.cmake  uninstall.cmake
src/controls/: aboutdatawidget.cpp  aboutdatawidget.h  addressbasecombobox.cpp  addressbasecombobox.h  addressspacecombobox.cpp  addressspacecombobox.h  applogoutput.cpp  applogoutput.h  applogoutput.ui  appstyle.h  bitnumberlabel.cpp  bitnumberlabel.h  bitpatterncontrol.cpp  bitpatterncontrol.h  bitpatterncontrol.ui  booleancombobox.cpp  booleancombobox.h  bytelisttextedit.cpp  bytelisttextedit.h  checkablegroupbox.cpp  checkablegroupbox.h  clickablelabel.cpp  clickablelabel.h  coloredpushbutton.cpp  coloredpushbutton.h  coloredtoolbutton.cpp  coloredtoolbutton.h  consoleoutput.cpp  consoleoutput.h  consoleoutput.ui  customframe.cpp  customframe.h  customlineedit.cpp  customlineedit.h  findreplacebar.cpp  findreplacebar.h  findreplacebar.ui  flowcontroltypecombobox.cpp  flowcontroltypecombobox.h  funccodefiltercombobox.cpp  (+67 more)
src/dialogs/: colorswatch.h  dialogabout.cpp  dialogabout.h  dialogabout.ui  dialogautosimulation.cpp  dialogautosimulation.h  dialogautosimulation.ui  dialogcoilsimulation.cpp  dialogcoilsimulation.h  dialogcoilsimulation.ui  dialogdisplaydefinition.cpp  dialogdisplaydefinition.h  dialogdisplaydefinition.ui  dialogdisplaydefinition.ui.tmp  dialogforcemultiplecoils.cpp  dialogforcemultiplecoils.h  dialogforcemultiplecoils.ui  dialogforcemultipleregisters.cpp  dialogforcemultipleregisters.h  dialogforcemultipleregisters.ui  dialogforcestatusregisters.cpp  dialogforcestatusregisters.h  dialogforcestatusregisters.ui  dialogmodbusdefinitions.cpp  dialogmodbusdefinitions.h  dialogmodbusdefinitions.ui  dialogmsgparser.cpp  dialogmsgparser.h  dialogmsgparser.ui  (+39 more)
(+148 files in other folders)
